--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple project to test Github Actions.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint src"
   },
   "repository": {
     "type": "git",
